--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "projects-app-react-native",
-    "slug": "projects-app-react-native",
+    "name": "projects-manager",
+    "slug": "projects-manager",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -23,7 +23,9 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "versionCode": 1,
+      "package": "com.ahmadsabbah.projectsmanagerapp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
