--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native": "0.64.3",
     "react-native-dotenv": "^3.3.1",
     "react-native-elements": "^3.4.2",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-paper": "^4.11.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
