--- a/app.json
+++ b/app.json
@@ -24,7 +24,8 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       },
-      "versionCode":1
+      "versionCode": 1,
+      "package": "com.ahmadsabbah.projectsmanagerapp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
